--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0"
   }
 }
