--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ APP_PORT = 3000
 DB_URL = mongodb+srv://aharshsingh25:UMF16MD7gqot@cluster0.c49rhk4.mongodb.net/
 JWT_SECRET = Shubsingh25@
 REFRESH_SECRET = Shubsingh@25
+APP_URL = http://localhost:3000
